@startuml
skinparam classAttributeIconSize 0

class Usuario {
  -id: UUID
  -nome: String
  -email: String
}

class Livro {
  -id: int
  -titulo: String
  -autor: String
  -genero: String
  -disponivel: boolean
}

class Emprestimo {
  -id: int
  -dataAluguel: LocalDateTime
  -dataDevolucao: LocalDateTime
}

class UsuarioDAO {
  +cadastrarUsuario(usuario: Usuario): void
  +listarUsuarios(): List<Usuario>
  +buscarPorId(id: UUID): Usuario
}

class LivroDAO {
  +cadastrarLivro(livro: Livro): void
  +atualizarLivro(livro: Livro): void
  +buscarLivroPorTitulo(titulo: String): Livro
}

class EmprestimoDAO {
  +salvarEmprestimo(emprestimo: Emprestimo): void
  +devolverLivro(idEmprestimo: int): void
  +listarEmprestimos(): List<Emprestimo>
  +buscarEmprestimoAtivoPorLivroId(idLivro: int): Emprestimo
}

Usuario "1" --> "0..*" Emprestimo : realiza
Livro "1" --> "0..*" Emprestimo : é emprestado em

UsuarioDAO --> Usuario
LivroDAO --> Livro
EmprestimoDAO --> Emprestimo
@enduml
